finishing index.html

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
       <nav>
         <a href="./index.html">Britlex</a>
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="#Skills">Skills</a></li>
-          <li><a href="#About Us">About Us</a></li>
-          <li><a href="#Pricing">Pricing</a></li>
-          <li><a href="#Contacts">Contacts</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contacts">Contacts</a></li>
         </ul>
         <a href="#">Let`s Talk</a>
       </nav>
     </header>
     <main>
       <section>
-        <h1>Learn Any Foreign Language</h1>
+        <h1 id="hero">Learn Any Foreign Language</h1>
         <p>
           With our teachers who write a program for each student, you will be able to make your
           first sketch after the first lesson.
@@ -30,16 +30,16 @@
         <a href="#">Get started</a>
         <img
           src="./images/learning-languages-bro.png"
-          alt="syudying language"
+          alt="Studying language"
           width="660"
           height="660"
         />
       </section>
       <section>
-        <h2 id="Skills">Skills</h2>
+        <h2 id="skills">Skills</h2>
         <ul>
           <li>
-            <img src="./images/shared-goals-bro.png" alt="goals" width="390" height="390" />
+            <img src="./images/shared-goals-bro.png" alt="Goals" width="390" height="390" />
             <h3>Speaking</h3>
             <p>
               Improve your English skills and confidence. Live classes and interactive lessons
@@ -52,7 +52,7 @@
             <a href="#">Learn more</a>
           </li>
           <li>
-            <img src="./images/typewriter.png" alt="typewriting" width="292" height="292" />
+            <img src="./images/typewriter.png" alt="Typewriting" width="292" height="292" />
             <h3>Writing</h3>
             <p>
               One of the most important and extensive areas of natural science, the science that
@@ -61,7 +61,7 @@
             <a href="#">Learn more</a>
           </li>
           <li>
-            <img src="./images/bookshelves.png" alt="bookshelves" width="370" height="246" />
+            <img src="./images/bookshelves.png" alt="Bookshelves" width="370" height="246" />
             <h3>Reading</h3>
             <p>
               perception and response actions of the user resulting from the use and/or upcoming use
@@ -70,7 +70,7 @@
             <a href="#">Learn more</a>
           </li>
           <li>
-            <img src="./images/podcast.png" alt="podcast" width="382" height="254" />
+            <img src="./images/podcast.png" alt="Podcast" width="382" height="254" />
             <h3>Listening</h3>
             <p>
               Here you can find activities to practise your listening skills. Listening will help
@@ -81,7 +81,7 @@
         </ul>
       </section>
       <section>
-        <h2 id="About Us">About Us</h2>
+        <h2 id="about-us">About Us</h2>
         <p>
           The model offers a framework for discussing problems related to the user's experience, as
           well as possible ways and means of solving them. Application development begins at the top
@@ -95,15 +95,70 @@
           </li>
           <li>
             <span>18</span>
-            <p>6</p>
+            <p>Teachers</p>
           </li>
           <li>
-            <span></span>
-            <p></p>
+            <span>6</span>
+            <p>Foreign languages</p>
           </li>
         </ul>
-        <img src="" alt="" />
+        <img src="./images/business-competition.png" alt="Competition" width="500" height="500" />
+      </section>
+      <section>
+        <h2 id="pricing">Pricing</h2>
+        <ul>
+          <li>
+            <img src="./images/online-test.png" alt="Online test" width="310" height="310" />
+            <h3>Self-study online course</h3>
+            <p>
+              Start learning English online in live classes with qualified EC teachers and students
+              from all over the world.
+            </p>
+            <div>
+              <p>£5.99<span>per month</span></p>
+            </div>
+          </li>
+          <li>
+            <img src="./images/lesson-bro.png" alt="Lesson" width="390" height="282" />
+            <h3>Live online classes</h3>
+            <p>Interactive group classes with expert teachers. Free 7-day trial</p>
+            <div>
+              <p>£12.99<span>per month</span></p>
+            </div>
+          </li>
+          <li>
+            <img src="./images/webinar-bro.png" alt="Webinar" width="340" height="340" />
+            <h3>Personal Tuition</h3>
+            <p>Online one-to-one English tutoring – enjoy our first session for only $1</p>
+            <div>
+              <p>£20.99<span>per month</span></p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <img src="./images/mailing.png" alt="Mailing us" width="476" height="428" />
+        <h2 id="contacts">Contzzsact Us</h2>
+        <p>
+          Discover your current English level by taking our free online English test.Sign up to our
+          newsletter for learning tips and free resources
+        </p>
+        <div></div>
       </section>
     </main>
+    <footer>
+      <a href="./index.html">Britlex</a>
+      <ul>
+        <li>
+          <a href="#">Terms and Conditions</a>
+        </li>
+        <li>
+          <a href="#">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="#">Cookie Policy</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
