correcting some mistakes

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
         </p>
         <ul>
           <li>
-            <span>800</span>
-            <p>Pupils</p>
+            <p><span>800</span></p>
+            <p><span>Pupils</span></p>
           </li>
           <li>
-            <span>18</span>
-            <p>Teachers</p>
+            <p><span>18</span></p>
+            <p><span>Teachers</span></p>
           </li>
           <li>
-            <span>6</span>
-            <p>Foreign languages</p>
+            <p><span>6</span></p>
+            <p><span>Foreign languages</span></p>
           </li>
         </ul>
         <img src="./images/business-competition.png" alt="Competition" width="500" height="500" />
