adding some explanation

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <ul>
           <li>
             <p><span>800</span></p>
+            <!--tag span тільки для оформлення в css, якщо тільки html. семантично правильним буде тільки tag p -->
             <p><span>Pupils</span></p>
           </li>
           <li>
@@ -115,6 +116,7 @@
               from all over the world.
             </p>
             <div>
+              <!--tag div та tag span для оформлення в css, якщо тільки html то ці теги тут не потрібні, по суті тільки tag p-->
               <p>£5.99<span> per month</span></p>
             </div>
           </li>
