--- a/index.html
+++ b/index.html
@@ -99,15 +99,17 @@
               </div>
             </li>
             <li class="skills-item">
-              <img
-                class="skills-item-img"
-                src="./images/typewriter.png"
-                alt="writing"
-                width="292"
-                height="292"
-              />
-              <div class="skills-text-container">
+              <div class="skills-item-thumb">
+                <img
+                  class="skills-item-img"
+                  src="./images/typewriter.png"
+                  alt="writing"
+                  width="293"
+                  height="293"
+                />
                 <h3 class="skills-item-title">Writing</h3>
+              </div>
+              <div class="skills-text-container">
                 <p class="skills-item-text">
                   One of the most important and extensive areas of natural science, the science that
                   studies substances, also their composition
