--- a/index.html
+++ b/index.html
@@ -78,13 +78,15 @@
           <h2 class="skills-title">Skills</h2>
           <ul class="skills-list">
             <li class="skills-item">
-              <img
-                class="skills-item-img"
-                src="./images/shared-goals-bro.png"
-                alt="speaks"
-                width="390"
-                height="390"
-              />
+              <div class="skills-item-img-thumb">
+                <img
+                  class="skills-item-img"
+                  src="./images/shared-goals-bro.png"
+                  alt="speaks"
+                  width="390"
+                  height="390"
+                />
+              </div>
               <div class="skills-text-container">
                 <h3 class="skills-item-title">Speaking</h3>
                 <p class="skills-item-text skills-item-top-text">
@@ -100,13 +102,15 @@
             </li>
             <li class="skills-item">
               <div class="skills-item-thumb">
-                <img
-                  class="skills-item-img"
-                  src="./images/typewriter.png"
-                  alt="writing"
-                  width="293"
-                  height="293"
-                />
+                <div class="skills-item-img-thumb">
+                  <img
+                    class="skills-item-img"
+                    src="./images/typewriter.png"
+                    alt="writing"
+                    width="293"
+                    height="293"
+                  />
+                </div>
                 <h3 class="skills-item-title">Writing</h3>
               </div>
               <div class="skills-text-container">
@@ -118,13 +122,15 @@
               </div>
             </li>
             <li class="skills-item">
-              <img
-                class="skills-item-img"
-                src="./images/bookshelves.png"
-                alt="reading"
-                width="370"
-                height="246"
-              />
+              <div class="skills-item-img-thumb">
+                <img
+                  class="skills-item-img"
+                  src="./images/bookshelves.png"
+                  alt="reading"
+                  width="370"
+                  height="246"
+                />
+              </div>
               <div class="skills-text-container">
                 <h3 class="skills-item-title">Reading</h3>
                 <p class="skills-item-text">
@@ -143,13 +149,15 @@
                 </p>
                 <a href="" class="skills-item-link">Learn more</a>
               </div>
-              <img
-                class="skills-item-img"
-                src="./images/podcast.png"
-                alt="listening"
-                width="382"
-                height="254"
-              />
+              <div class="skills-item-img-thumb">
+                <img
+                  class="skills-item-img"
+                  src="./images/podcast.png"
+                  alt="listening"
+                  width="382"
+                  height="254"
+                />
+              </div>
             </li>
           </ul>
         </div>
@@ -192,12 +200,14 @@
           <h2 class="prices-title">Pricing</h2>
           <ul class="prices-list">
             <li class="prices-item">
-              <img
-                class="prices-item-img"
-                src="./images/online-test.png"
-                alt="studying"
-                width="310"
-              />
+              <div class="prices-item-thumb">
+                <img
+                  class="prices-item-img"
+                  src="./images/online-test.png"
+                  alt="studying"
+                  width="310"
+                />
+              </div>
               <h3 class="prices-item-title">Self-study online course</h3>
               <p class="prices-item-top-text">
                 Start learning English online in live classes with qualified EC teachers and
@@ -208,13 +218,15 @@
               </p>
             </li>
             <li class="prices-item">
-              <img
-                class="prices-item-img"
-                src="./images/lesson-bro.png"
-                alt="lesson"
-                width="390"
-                width="283"
-              />
+              <div class="prices-item-thumb">
+                <img
+                  class="prices-item-img"
+                  src="./images/lesson-bro.png"
+                  alt="lesson"
+                  width="390"
+                  width="283"
+                />
+              </div>
               <h3 class="prices-item-title">Live online classes</h3>
               <p class="prices-item-top-text">
                 Interactive group classes with expert teachers. Free 7-day trial
@@ -224,12 +236,14 @@
               </p>
             </li>
             <li class="prices-item">
-              <img
-                class="prices-item-img"
-                src="./images/webinar-bro.png"
-                alt="tuition"
-                width="340"
-              />
+              <div class="prices-item-thumb">
+                <img
+                  class="prices-item-img"
+                  src="./images/webinar-bro.png"
+                  alt="tuition"
+                  width="340"
+                />
+              </div>
               <h3 class="prices-item-title">Personal Tuition</h3>
               <p class="prices-item-top-text">
                 Online one-to-one English tutoring – enjoy our first session for only $1
