--- a/index.html
+++ b/index.html
@@ -259,11 +259,19 @@
         <div class="container contacts-container">
           <img class="contacts-img" src="./images/mailing.png" alt="mailing" width="476" />
           <div class="contacts-content-container">
-            <h2 class="contacts-title">Contact Us</h2>
+            <h2 class="contacts-title">Contzzsact Us</h2>
             <p class="contacts-text">
               Discover your current English level by taking our free online English test.Sign up to
               our newsletter for learning tips and free resources
             </p>
+            <form class="contacts-form">
+              <label class="contacts-label"
+                ><input type="email" name="user-mail" class="contacts-input" placeholder=" " /><span
+                  class="contacts-label-text"
+                  >Enter Your E-mail</span
+                ></label
+              ><button class="contacts-button">Subscribe</button>
+            </form>
           </div>
         </div>
       </section>
